@@ -1,4 +1,4 @@
-/* Time-stamp: <2004-08-21 20:13:54 jcs>
+/* Time-stamp: <2004-09-15 23:57:22 jcs>
 |
 |  Copyright (C) 2002-2003 Jorg Schuler <jcsjcs at users.sourceforge.net>
 |  Part of the gtkpod project.
@@ -118,7 +118,7 @@ gchar *filename_from_uri (const char *uri,
 void generate_category_playlists (T_item cat);
 Playlist *generate_displayed_playlist (void);
 Playlist *generate_selected_playlist (void);
-Playlist *randomize_current_playlist (void);
+void randomize_current_playlist (void);
 Playlist *generate_random_playlist (void);
 Playlist *generate_not_listed_playlist (void);
 Playlist *generate_playlist_with_name (GList *tracks, gchar *pl_name,
